zellij-utils/src/snapshots/zellij_utils__setup__setup_test__layout_keybinds_override_config_keybinds.snap
---
source: zellij-utils/src/setup.rs
expression: "format!(\"{:#?}\", config)"
---
Config {
    keybinds: {
        Normal: {
            KeyWithModifier {
                bare_key: Char(
                    'b',
                ),
                key_modifiers: {},
            }: [
                SwitchToMode {
                    input_mode: Session,
                },
            ],
            KeyWithModifier {
                bare_key: Char(
                    'b',
                ),
                key_modifiers: {
                    Ctrl,
                },
            }: [
                SwitchToMode {
                    input_mode: Resize,
                },
            ],
            KeyWithModifier {
                bare_key: Char(
                    'c',
                ),
                key_modifiers: {
                    Ctrl,
                },
            }: [
                SwitchToMode {
                    input_mode: Resize,
                },
            ],
        },
        Resize: {
            KeyWithModifier {
                bare_key: Char(
                    'b',
                ),
                key_modifiers: {},
            }: [
                SwitchToMode {
                    input_mode: Locked,
                },
            ],
            KeyWithModifier {
                bare_key: Char(
                    'c',
                ),
                key_modifiers: {
                    Ctrl,
                },
            }: [
                SwitchToMode {
                    input_mode: Resize,
                },
            ],
        },
        Scroll: {
            KeyWithModifier {
                bare_key: Char(
                    'b',
                ),
                key_modifiers: {},
            }: [
                SwitchToMode {
                    input_mode: Locked,
                },
            ],
            KeyWithModifier {
                bare_key: Char(
                    'c',
                ),
                key_modifiers: {
                    Ctrl,
                },
            }: [
                SwitchToMode {
                    input_mode: Resize,
                },
            ],
        },
    },
    options: Options {
        simplified_ui: None,
        theme: None,
        theme_dark: None,
        theme_light: None,
        default_mode: None,
        default_shell: None,
        default_cwd: None,
        default_layout: None,
        layout_dir: None,
        theme_dir: None,
        mouse_mode: None,
        pane_frames: None,
        mirror_session: None,
        on_force_close: None,
        scroll_buffer_size: None,
        copy_command: None,
        copy_clipboard: None,
        copy_on_select: None,
        osc8_hyperlinks: None,
        scrollback_editor: None,
        session_name: None,
        attach_to_session: None,
        auto_layout: None,
        session_serialization: None,
        serialize_pane_viewport: None,
        scrollback_lines_to_serialize: None,
        styled_underlines: None,
        serialization_interval: None,
        disable_session_metadata: None,
        support_kitty_keyboard_protocol: None,
        web_server: None,
        web_sharing: None,
        stacked_resize: None,
        show_startup_tips: None,
        show_release_notes: None,
        advanced_mouse_actions: None,
        mouse_hover_effects: None,
        visual_bell: None,
        focus_follows_mouse: None,
        mouse_click_through: None,
        web_server_ip: None,
        web_server_port: None,
        web_server_cert: None,
        web_server_key: None,
        enforce_https_for_localhost: None,
        relay_server_url: None,
        encrypt_web_sharing: None,
        relay_tunnel_auth_token: None,
        post_command_discovery_hook: None,
        client_async_worker_tasks: None,
        mobile_layout: None,
        mobile_threshold_cols: None,
        mobile_threshold_rows: None,
    },
    themes: {},
    plugins: PluginAliases {
        aliases: {
            "about": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "about",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "compact-bar": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "compact-bar",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "configuration": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "configuration",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "filepicker": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "strider",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: Some(
                    "/",
                ),
            },
            "mobile": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "mobile",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "plugin-manager": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "plugin-manager",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "session-manager": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "session-manager",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "status-bar": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "status-bar",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "strider": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "strider",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "tab-bar": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "tab-bar",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
            "welcome-screen": RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "session-manager",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {
                        "welcome_screen": "true",
                    },
                ),
                initial_cwd: None,
            },
        },
    },
    ui: UiConfig {
        pane_frames: FrameConfig {
            rounded_corners: false,
            hide_session_name: false,
        },
    },
    env: {},
    background_plugins: {
        RunPlugin(
            RunPlugin {
                _allow_exec_host_cmd: false,
                location: Zellij(
                    PluginTag(
                        "link",
                    ),
                ),
                configuration: PluginUserConfiguration(
                    {},
                ),
                initial_cwd: None,
            },
        ),
    },
    web_client: WebClientConfig {
        font: "monospace",
        theme: None,
        cursor_blink: false,
        cursor_inactive_style: None,
        cursor_style: None,
        mac_option_is_meta: true,
        base_url: None,
        font_size: None,
    },
}
